# kb-pipeline

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.facade  Dockerfile.parse-svc  SoT.md  SoT.v1.md  docker-compose.override.yml  docker-compose.yml  kb-stage-monitoring.md  pyproject.toml  requirements.txt  todo_list.md
_workspace/: 01-architecture.md  02-changes.md  03-dev-progress.md  README.md
docker/: edgequake.Dockerfile  edgequake.Dockerfile.dockerignore
docs/: HANDOVER-kb-pipeline-provider.md  compose-smoke.md  kb-pipeline-process-definition.md  kbp-docker-startup.md  runbook-v2-smoke.md  공통지식베이스_파이프라인_v2.md
kb_pipeline/: __init__.py  blockify.py  community.py  modal.py  search.py
kb_pipeline/tests/: conftest.py  test_modal_spans.py
parse_service/: app.py  minio_client.py  parsing.py  pdf_pages.py
parse_service/tests/: test_minio_client.py  test_parse.py  test_pdf_pages.py
scripts/: restart-gate-stack.sh  run-doc-guard.sh  run-excel-parser.sh  run-facade.sh  run-kb-backend.sh  run-parse-svc.sh
service/: adaptive_chunk.py  app.py  edgequake.py  excel_parser_client.py  ingest.py  llm.py  parse_client.py  parsing.py
service/scripts/: start_dedicated_edgequake.sh
service/tests/: test_app.py  test_chunk_endpoint.py  test_e2e_smoke.md  test_edgequake_async.py  test_excel_parser_client.py  test_ingest.py  test_ingest_orchestration.py  test_insert_endpoint.py  test_parsing.py  (+2 more)
tests/: test_blockify.py  test_community.py  test_modal.py  test_modal_absorb.py  test_modal_boundary.py  test_modal_parallel.py  test_search.py
(+18 files in other folders)
